--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-
+<meta name="google-site-verification" content="B9tSx5U5dn7UaNpyuZEr34Y_nw1PANEn4yOVYQ2ymBQ" />
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Benhui
 middle_name:
